--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,9 +59,9 @@ services:
       dockerfile: Dockerfile
       target: app
       args:
-        # build-time NEXT_PUBLIC_* for the App
-        NEXT_PUBLIC_BETTER_AUTH_URL: ${APP_PUBLIC_URL}
-        NEXT_PUBLIC_PORTAL_URL: ${PORTAL_PUBLIC_URL}
+        # Build-time public URLs (provided by Coolify automatically)
+        NEXT_PUBLIC_BETTER_AUTH_URL: ${SERVICE_URL_APP}
+        NEXT_PUBLIC_PORTAL_URL: ${SERVICE_URL_PORTAL}
     ports:
       - '3000:3000'
     env_file:
@@ -71,10 +71,10 @@ services:
       HOSTNAME: 0.0.0.0
       PORT: 3000
 
-      # runtime auth URLs for the App
-      BETTER_AUTH_URL: ${APP_PUBLIC_URL}
-      NEXT_PUBLIC_BETTER_AUTH_URL: ${APP_PUBLIC_URL}
-      NEXT_PUBLIC_PORTAL_URL: ${PORTAL_PUBLIC_URL}
+      # Runtime public URLs (same as build-time)
+      BETTER_AUTH_URL: ${SERVICE_URL_APP}
+      NEXT_PUBLIC_BETTER_AUTH_URL: ${SERVICE_URL_APP}
+      NEXT_PUBLIC_PORTAL_URL: ${SERVICE_URL_PORTAL}
     depends_on:
       db:
         condition: service_healthy
@@ -93,8 +93,8 @@ services:
       dockerfile: Dockerfile
       target: portal
       args:
-        # build-time NEXT_PUBLIC_* for the Portal
-        NEXT_PUBLIC_BETTER_AUTH_URL: ${PORTAL_PUBLIC_URL}
+        # Build-time public URL for Portal (provided by Coolify automatically)
+        NEXT_PUBLIC_BETTER_AUTH_URL: ${SERVICE_URL_PORTAL}
     ports:
       - '3002:3000'
     env_file:
@@ -104,9 +104,9 @@ services:
       HOSTNAME: 0.0.0.0
       PORT: 3000
 
-      # runtime auth URLs for the Portal
-      BETTER_AUTH_URL: ${PORTAL_PUBLIC_URL}
-      NEXT_PUBLIC_BETTER_AUTH_URL: ${PORTAL_PUBLIC_URL}
+      # Runtime public URL for Portal
+      BETTER_AUTH_URL: ${SERVICE_URL_PORTAL}
+      NEXT_PUBLIC_BETTER_AUTH_URL: ${SERVICE_URL_PORTAL}
     depends_on:
       db:
         condition: service_healthy
